syntax = "proto3";
option go_package = "../wire";

message MsgAvaRequest {
    uint32 requestID    = 1;
    repeated bytes invs = 2;
}

message MsgAvaResponse {
    uint32 requestID = 1;
    bytes votes      = 2;
}